syntax = "proto3";

option csharp_namespace = "Skua.gRPC.Server";

package scripts;

import "google/protobuf/empty.proto";

service GetScripts {
    rpc SetupGHClient (TokenRequest) returns (google.protobuf.Empty);
    rpc GetRepos (GetReposRequest) returns (GetReposResponse);
    rpc GetScriptsFromRepo (GetScriptRequest) returns (GetScriptResponse);
}

message GetReposRequest {
    bool refresh = 1;
}

message GetReposResponse {
    repeated GrpcScriptRepo Repos = 1;
}

message GetScriptRequest {
    GrpcScriptRepo repo = 1;
    bool refresh = 2;
}

message GetScriptResponse {
    repeated GrpcScriptInfo scriptInfos = 1;
}

message GrpcScriptRepo {
    string username = 1;
    string repoName = 2;
    string extension = 3;
    string branch = 4;
    string author = 5;
}

message GrpcScriptInfo {
    string fileName = 1;
    string hash = 2;
    int32 size = 3;
    string downloadUrl = 4;
    string filePath = 5;
}

message TokenRequest {
    string token = 1;
}